{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 16,
  "lineage": "ce92cad1-1e34-dfd2-d2ab-c97e6d131abd",
  "resources": [
    {
      "module": "module.core",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:349928385964:internet-gateway/igw-0b7e810dd5be8a1ff",
            "id": "igw-0b7e810dd5be8a1ff",
            "owner_id": "349928385964",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "Staging",
              "Name": "Staging-igw"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "Staging-igw"
            },
            "vpc_id": "vpc-0cad1bfa4e9939ece"
          },
          "dependencies": [
            "module.core.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:349928385964:loadbalancer/app/Staging-alb/3e151d615dcd0a74",
            "arn_suffix": "app/Staging-alb/3e151d615dcd0a74",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Staging-alb-531144271.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:349928385964:loadbalancer/app/Staging-alb/3e151d615dcd0a74",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Staging-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-2",
            "security_groups": [
              "sg-0d227d65e592af8ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02e50307514a3dc87"
              },
              {
                "subnet_id": "subnet-0431c17faa2f30fd9"
              }
            ],
            "subnets": [
              "subnet-02e50307514a3dc87",
              "subnet-0431c17faa2f30fd9"
            ],
            "tags": {
              "Environment": "Staging"
            },
            "tags_all": {
              "Environment": "Staging"
            },
            "vpc_id": "vpc-0cad1bfa4e9939ece",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.core.aws_security_group.alb",
            "module.core.aws_subnet.public",
            "module.core.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:349928385964:listener/app/Staging-alb/3e151d615dcd0a74/4fc7fb5c7d9e3713",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:349928385964:listener/app/Staging-alb/3e151d615dcd0a74/4fc7fb5c7d9e3713",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:349928385964:loadbalancer/app/Staging-alb/3e151d615dcd0a74",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core.aws_lb.this",
            "module.core.aws_security_group.alb",
            "module.core.aws_subnet.public",
            "module.core.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b7e810dd5be8a1ff",
            "id": "r-rtb-05b714d1b9c40332d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-05b714d1b9c40332d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core.aws_internet_gateway.this",
            "module.core.aws_route_table.public",
            "module.core.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:349928385964:route-table/rtb-05b714d1b9c40332d",
            "id": "rtb-05b714d1b9c40332d",
            "owner_id": "349928385964",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [],
            "tags": {
              "Environment": "Staging",
              "Name": "Staging-public-rt"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "Staging-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cad1bfa4e9939ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b5b442f135fe6b8",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-05b714d1b9c40332d",
            "subnet_id": "subnet-02e50307514a3dc87"
          },
          "dependencies": [
            "module.core.aws_route_table.public",
            "module.core.aws_subnet.public",
            "module.core.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0020daf6568c206b3",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-05b714d1b9c40332d",
            "subnet_id": "subnet-0431c17faa2f30fd9"
          },
          "dependencies": [
            "module.core.aws_route_table.public",
            "module.core.aws_subnet.public",
            "module.core.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:349928385964:security-group/sg-0d227d65e592af8ae",
            "description": "ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d227d65e592af8ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Staging-alb-sg",
            "name_prefix": "",
            "owner_id": "349928385964",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Staging",
              "Name": "Staging-alb-sg"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "Staging-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cad1bfa4e9939ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:349928385964:security-group/sg-06d8b3e4a6320c1bc",
            "description": "ECS tasks SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d8b3e4a6320c1bc",
            "ingress": [],
            "name": "Staging-ecs-sg",
            "name_prefix": "",
            "owner_id": "349928385964",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Staging",
              "Name": "Staging-ecs-sg"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "Staging-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cad1bfa4e9939ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:349928385964:subnet/subnet-0fe310d1f267894d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe310d1f267894d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349928385964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "Staging",
              "Name": "Staging-private-0"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "Staging-private-0"
            },
            "vpc_id": "vpc-0cad1bfa4e9939ece"
          },
          "dependencies": [
            "module.core.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:349928385964:subnet/subnet-0f30d1ae18de03322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f30d1ae18de03322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349928385964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "Staging",
              "Name": "Staging-private-1"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "Staging-private-1"
            },
            "vpc_id": "vpc-0cad1bfa4e9939ece"
          },
          "dependencies": [
            "module.core.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:349928385964:subnet/subnet-02e50307514a3dc87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e50307514a3dc87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "349928385964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "Staging",
              "Name": "Staging-public-0"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "Staging-public-0"
            },
            "vpc_id": "vpc-0cad1bfa4e9939ece"
          },
          "dependencies": [
            "module.core.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:349928385964:subnet/subnet-0431c17faa2f30fd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0431c17faa2f30fd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "349928385964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "Staging",
              "Name": "Staging-public-1"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "Staging-public-1"
            },
            "vpc_id": "vpc-0cad1bfa4e9939ece"
          },
          "dependencies": [
            "module.core.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:349928385964:vpc/vpc-0cad1bfa4e9939ece",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0726027f12a6509fe",
            "default_route_table_id": "rtb-0d8da35d5ef35e328",
            "default_security_group_id": "sg-0f94028f573ed3f20",
            "dhcp_options_id": "dopt-069579c901c4c06c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cad1bfa4e9939ece",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8da35d5ef35e328",
            "owner_id": "349928385964",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "Staging",
              "Name": "Staging-vpc"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "Staging-vpc"
            }
          }
        }
      ]
    }
  ]
}